added test.  created controller